Animation du heart favoris

--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
                                         </div>
                                         <div class="favoris favoris-ind">
                                             <span class="ic">
-                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-regular fa-heart heart-thin-ic"></i>
+                                            </span>
+                                            <span class="ic-heart">
+                                                <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                                             </span>
                                         </div>
                                     </div>
@@ -164,7 +167,10 @@
                                         </div>
                                         <div class="favoris favoris-ind">
                                             <span class="ic">
-                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-regular fa-heart heart-thin-ic"></i>
+                                            </span>
+                                            <span class="ic-heart">
+                                                <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                                             </span>
                                         </div>
                                     </div>
@@ -186,7 +192,10 @@
                                         </div>
                                         <div class="favoris favoris-ind">
                                             <span class="ic">
-                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-regular fa-heart heart-thin-ic"></i>
+                                            </span>
+                                            <span class="ic-heart">
+                                                <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                                             </span>
                                         </div>
                                     </div>
@@ -208,7 +217,10 @@
                                         </div>
                                         <div class="favoris favoris-ind">
                                             <span class="ic">
-                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-regular fa-heart heart-thin-ic"></i>
+                                            </span>
+                                            <span class="ic-heart">
+                                                <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                                             </span>
                                         </div>
                                     </div>
