--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -42,8 +42,11 @@
                 <div class="title" id="title">
                     <h2 class="h-title">La palette du goût</h2>
                     <div class="favoris" id="favoris">
-                        <span class="heart" id="heart">
-                            <i class="fa-regular fa-heart"></i>
+                        <span class="ic">
+                            <i class="fa-regular fa-heart heart-thin-ic"></i>
+                        </span>
+                        <span class="ic-heart">
+                            <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                         </span>
                     </div>
                 </div>
