Correction du code html + ajout du contenu des menus

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -41,8 +41,11 @@
                 <div class="title" id="title">
                     <h2 class="h-title">À la française</h2>
                     <div class="favoris" id="favoris">
-                        <span class="heart" id="heart">
-                            <i class="fa-regular fa-heart"></i>
+                        <span class="ic">
+                            <i class="fa-regular fa-heart heart-thin-ic"></i>
+                        </span>
+                        <span class="ic-heart">
+                            <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                         </span>
                     </div>
                 </div>
@@ -50,12 +53,172 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Tartare de pouple acidulé</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Aux zestes d'orange
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">25€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Velouté de légumes d'antan</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Carotte, panais, topinambour
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">35€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Soupe à l'oignon</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Revisitée
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">20€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
                 </div>
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Coquilles Saint-Jacques</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Accompagnées d'une purée de panais
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">40€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Magret de canard</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et parmentier de pommes de terre
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">35€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Pigeonneau d'Ille-et-Vilaine</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Sur son lit de gnocchis aux légumes
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">44€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
                 </div>
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Pétales de violettes glacés</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et purée de noisettes
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">18€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Fondant au chocolat</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Revisité
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">22€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Millefeuille croustillant</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Myrtilles et pâte d'amande
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">23€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="commandes">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="btn-princ" id="btn">
+                    <h6 class="command-h6">c</h6>
+                    <button>
+                        Commander
+                    </button>
                 </div>
             </div>
         </section>
