--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -42,8 +42,11 @@
                 <div class="title" id="title">
                     <h2 class="h-title">Le délice des sens</h2>
                     <div class="favoris" id="favoris">
-                        <span class="heart" id="heart">
-                            <i class="fa-regular fa-heart"></i>
+                        <span class="ic">
+                            <i class="fa-regular fa-heart heart-thin-ic"></i>
+                        </span>
+                        <span class="ic-heart">
+                            <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                         </span>
                     </div>
                 </div>
@@ -51,12 +54,172 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Tartare de thon</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Assaisonné au yuzu
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">25€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Bouchée de homard croustillant</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et sa farandole de petits légumes
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">35€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Velouté de cèpes</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Au truffes
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">20€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
                 </div>
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Poulet de rôti aux herbes de Provence</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et sa crème de truffe
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">40€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Langoustine rôtie</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et ses légumes de saison
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">35€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Côte de boeuf Angus</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et sa purée de panais
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">44€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
                 </div>
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Farandole de desserts</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Du chef
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">18€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Crème brûlée</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Revisitée
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">22€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Tiramisu</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    À la noisette
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">23€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="commandes">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="btn-princ" id="btn">
+                    <h6 class="command-h6">c</h6>
+                    <button>
+                        Commander
+                    </button>
                 </div>
             </div>
         </section>
