--- a/note-enchantee.html
+++ b/note-enchantee.html
@@ -40,8 +40,11 @@
                 <div class="title" id="title">
                     <h2 class="h-title">La note enchantée</h2>
                     <div class="favoris" id="favoris">
-                        <span class="heart" id="heart">
-                            <i class="fa-regular fa-heart"></i>
+                        <span class="ic">
+                            <i class="fa-regular fa-heart heart-thin-ic"></i>
+                        </span>
+                        <span class="ic-heart">
+                            <i class="fa-sharp fa-solid fa-heart heart-full-ic"></i>
                         </span>
                     </div>
                 </div>
@@ -49,12 +52,188 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Ravioles de foie gras</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Accompagnées de leur crème à la truffe
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">25€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Caviar osciètre</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Sur blini à la farine de blé noir
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">35€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Homar et espuma de...</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Marinés aux zestes d'orange
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">20€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Foie gras de canard cuit entier</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Confiture de figue et pain toasté
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">35€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
                 </div>
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Noix de coquilles Saint-Jacques</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Sur lit de purée de céleri-rave
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">40€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Langoustine poêlée</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et purée de patate douce
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">35€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Mijoté de queue de boeuf</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et riz sauvage aux zestes de citron
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">44€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
                 </div>
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Macaron noisette et chocolat</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Glace au caramel brun et sel de Guérande
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">18€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Baba au rhum revisité</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Avec son coulis de citron
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">22€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                        <button class="shad btn-menu">
+                            <span class="tit-c">
+                                <span>Tarte au citron meringuée</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Déstructurée
+                                </span>
+                            </span>
+                            <span class="valid-btn">
+                                <span class="price">23€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="commandes">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="btn-princ" id="btn">
+                    <h6 class="command-h6">c</h6>
+                    <button>
+                        Commander
+                    </button>
                 </div>
             </div>
         </section>
