--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -130,7 +130,7 @@
                             </span>
                             <span class="txt">
                                 <span class="text">
-                                    Assaisonée à la truffe sur le lit de...
+                                    Assaisonnée à la truffe sur le lit de...
                                 </span>
                             </span>
                             <span class="valid-btn">
